<resources>
    <string name="app_name">ConstruyendoPacifico</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttoncamera">buttonCamera</string>
    <string name="coordenadas_geogr_ficas">Coordenadas Geográficas :</string>
    <string name="longitud">Longitud</string>
    <string name="altitud">Altitud</string>
    <string name="latitud">Latitud</string>
    <string name="regresar">Regresar</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="department">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="populated_center">Centros Poblados</string>
    <string name="vereda">Centros Poblados</string>
    <string name="demograf_a">Demografía</string>
    <string name="seleccionar_municipio">Seleccionar Municipio</string>
    <string name="seleccionar_vereda">Seleccionar Vereda</string>
    <string name="superficiales">Superficiales</string>
    <string name="tipo_poblaci_n">Tipo Población</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="grupo_etnico">Grupo Etnico</string>
    <string name="construyendo_pac_fico">Construyendo Pacífico</string>
    <string name="n_mero_de_habitantes">Número de habitantes</string>
    <string name="surface_sources">Fuentes Superficiales</string>
    <string name="underground_sources">Fuentes Subterraneas</string>
    <string name="abastecimiento_dle_lugar">Abastecimiento del lugar</string>
    <string name="subterraneas">Subterraneas</string>
    <string name="tipo_de_captaci_n">Tipo de Captación</string>
    <string name="guardar">Guardar</string>
    <string name="habitantes">Habitantes</string>
    <string name="actualizar">Actualizar</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo</string>
    <string name="sr">Sr.</string>
    <string name="fotousuario">FotoUsuario</string>
    <string name="exittoapp">ExitToApp</string>
    <string name="lorem">Lorem</string>
    <string name="registrar">Registrar Zona</string>
    <string name="deletezone">DeleteZone</string>
    <string name="editzone">EditZone</string>
    <string name="nextactionzone">NextActionZone</string>
    <string name="center">Centro de Teleinformatica y Produccion Industrial </string>
    <string name="titulo_1">Creando para Crecer</string>
    <string name="titulo_2">Con tu ayuda hacemos un gran cambio</string>
    <string name="factory">Fabrica de Software</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="boton_1">INICIAR SESION</string>
    <string name="sena_1">SENA comunica </string>
    <string name="sena_2">www.sena.edu.co</string>
    <string name="boton_2">Regresar</string>
    <string name="energ_a_alternativa">Energía Alternativa</string>
    <string name="saneamiento">Saneamiento</string>
    <string name="fuente_de_agua_y_potabilidad">Fuente de Agua y Potabilidad</string>
    <string name="arquitectura_de_construcci_n_del_pac_fico">Arquitectura de Construcción del Pacífico</string>
    <string name="abastecimiento_del_lugar">Abastecimiento del Lugar</string>
    <string name="tipo_de_decantaci_n">Tipo de Decantación</string>
    <string name="analyzeParameters">Parametros a Analizar</string>
    <string name="addSample">Agregar Muestra</string>
    <string name="typeSample">Tipo de muestra :</string>
    <string name="naturalWater">Agua Natural</string>
    <string name="treatedWater">Agua Tratada</string>
    <string name="residualWater">Agua Residual</string>
    <string name="other">Otro</string>
    <string name="sample1"># 1</string>
    <string name="sample2"># 2</string>
    <string name="sample3"># 3</string>
    <string name="sample4"># 4</string>
    <string name="sample5"># 5</string>
    <string name="average">Promedio</string>
    <string name="limit">Limite</string>
    <string name="feature">Caracteristica</string>
    <string name="samples">Muestras</string>
    <string name="selectSample">Selecciona un parametro para añadir muestra : </string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="saveAnalysis">Guardar Analisis</string>
    <string name="noAnalysis">No se puede comenzar a tomar muestras sin guardar previamente un analisis</string>
    <string name="noSamples">No hay muestras registradas</string>
    <string name="tittleForm">Encuesta Sobre Caracterización Sociocultural De La Zona Rural</string>
    <string name="comunity">Comunidad</string>
    <string name="age">Edad</string>
    <string name="ocupacy">Ocupacion</string>
    <string name="sex">Genero</string>
    <string name="comunidades">San José</string>
    <string name="numberForms">No. Encuesta</string>
    <string name="numbers">12</string>
    <string name="ocupacion">Ama de Casa</string>
    <string name="dateForm">Fecha</string>
    <string name="female">F</string>
    <string name="masculine">M</string>
    <string name="nameForm">Nombre del encuestado</string>
    <string name="namee">XXXXXX XXXXX XXXXXX</string>
    <string name="question1">1.	Cuántas familias comparten la vivienda:</string>
    <string name="question2">2.	Número de personas que habitan la vivienda:</string>
    <string name="question3">3.	Número de Niños de 0 a 14 años en la vivienda:</string>
    <string name="question4">4.	Número de jóvenes de 14 a 18 años en la vivienda:</string>
    <string name="question5">5.	Numero de adultos mayores de 18 años en la vivienda:</string>
    <string name="question6">6.	Los menores duermen en compañía de adultos:</string>
    <string name="question7">7.	La vocación productiva de la familia es:</string>
    <string name="question8">8.	Las fuentes de financiación para la adquisición / Construcción de la Vivienda provienen principalmente de:</string>
    <string name="question9">9.	¿Cuál es el nivel educativo más alto alcanzado en la familia?</string>
    <string name="question10">10. Hace cuanto tiempo (años) reside en la vivienda</string>
    <string name="question11">11. Tipo de vivienda</string>
    <string name="question12">12. Tipo de tenencia de la vivienda</string>
    <string name="question13">13. La vivienda se encuentra en espacios de alto riesgo</string>
    <string name="question14">14. A qué tipo de riesgo esta propensa la vivienda</string>
    <string name="question15">15. La vivienda donde vive es</string>
    <string name="question16">16. Prioritariamente cual miembro de la familia hace la gestión de Adquirir (A), Mantener (M) y Desarrollar (D) la Vivienda.</string>
    <string name="question17">17. En su gran mayoría, el material predominante de la vivienda es</string>
    <string name="question18">18. Si la respuesta es madera, diga si necesitan tiempos especiales para el corte del material</string>
    <string name="question19">19. Indique que tipo de madera se utilizó para su construcción (por ejemplo, cedro).</string>
    <string name="question20">20. Indique las dimensiones de la vivienda, si las conoce</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="farmers">Agricultores</string>
    <string name="fishermen">Pescadores</string>
    <string name="merchants">Comerciantes</string>
    <string name="miners">Mineros</string>
    <string name="forestryActivities">Actividades forestales</string>
    <string name="builders">Constructores</string>
    <string name="employees">Empleados</string>
    <string name="Inheritance">Herencia</string>
    <string name="ownFunds">Fondos Propios</string>
    <string name="subsidies">Subsidios</string>
    <string name="BankLoan">Prestamo Bancario</string>
    <string name="PrivateLoan">Prestamo Particular</string>
    <string name="PopularAssociations">Asociaciones Populares de Vivienda</string>
    <string name="CouncilManagement">Gestión de consejo comunitario</string>
    <string name="cooperatives">Cooperativas</string>
    <string name="minga">Minga</string>
    <string name="pregunta21">21. Indique las dimenciones del lote o terreno (incluida la vivienda y parte productiva), si las conoce:</string>
    <string name="ancho">Ancho</string>
    <string name="largo">Largo</string>
    <string name="area">Área</string>
    <string name="pregunta22">22. La propiedad o lote cuenta con terreno para cultivar o cría de animales:</string>
    <string name="pregunta23">23. Indique si la vivienda cuenta con los siguientes espacios:</string>
    <string name="a23">Habitaciones para dormir</string>
    <string name="b23">Sala</string>
    <string name="c23">Comedor</string>
    <string name="d23">Sala-Comedor</string>
    <string name="e23">Cocina</string>
    <string name="f23">Baños</string>
    <string name="g23">Almacen para herramientas</string>
    <string name="h23">Almacen de agroinsumos y fertilizantes</string>
    <string name="i23">Patio</string>
    <string name="j23">Azotea (huerta trasera)</string>
    <string name="k23">Anden (Espacio privado frente a la calle)</string>
    <string name="l23">Soberado (Espacio entre la cubierta y el cielorraso)</string>
    <string name="pregunta24">24. El patio el usado para:</string>
    <string name="p23">Estos almacenes estan cerrados bajo llave</string>
    <string name="pregunta25">25. Qué tipo de plantas cultiva</string>
    <string name="preunta125">25. ¿Qué animales crían?</string>
    <string name="gallinas">Gallinas</string>
    <string name="conejos">Conejos</string>
    <string name="patos">Patos</string>
    <string name="pavos">Pavos</string>
    <string name="codornices">Codornices</string>
    <string name="peces">Peces</string>
    <string name="otros_cual">Otros ¿Cual?</string>
    <string name="pregunta26">26. Los espacios para dormir son divididos con:</string>
    <string name="madera">Madera</string>
    <string name="concreto">Concreto</string>
    <string name="cortinas">Cortinas</string>
    <string name="laminas">Laminas</string>
    <string name="otro_tipo_de_division">Otro tipo de division</string>
    <string name="pregunta27">27. Cuantas personas duermen por habitación:</string>
    <string name="pregunta29">29. Que tipo de discapacidad</string>
    <string name="pregunta28">28. ¿Hay personas con discapacidad en la vivienda?</string>
    <string name="pregunta30">30. La vivienda ha sido condicionada para esas personas con discapacidad.</string>
    <string name="interior31">Al interior de la vivienda</string>
    <string name="exterior31">Al exterior de la vivienda</string>
    <string name="pregunta40">40. El techo de la vivienda es de:</string>
    <string name="concreto_plancha">Concreto, Loza o Plancha</string>
    <string name="zincc">Zinc</string>
    <string name="eternit">Eternit</string>
    <string name="pvc">Pvc</string>
    <string name="aluminio">Aluminio</string>
    <string name="paja">Paja</string>
    <string name="palma">Palma</string>
    <string name="teja_carton">Teja de Cartón</string>
    <string name="plastico">Plastico</string>
    <string name="pregunta41">41. Qué tipo de material poseen las paredes exteriores de la vivienda:</string>
    <string name="barro">Barro</string>
    <string name="guadua">Guadua</string>
    <string name="ladrillococido">Ladrillo Cocido</string>
    <string name="barequee">Bareque</string>
    <string name="adobe">Adobe</string>
    <string name="calados">Calados</string>
    <string name="Bloque_cemento">Bloque de cemento</string>
    <string name="pregunta42">42. Qué tipo de acabado tienen las fachadas de la vivienda:</string>
    <string name="baldosa">Baldosa</string>
    <string name="p11">11.Tipo de vivienda</string>
    <string name="casa">Casa</string>
    <string name="habitacion">Habitación</string>
    <string name="apartamento">Apartamento</string>
    <string name="which">¿Cuál?</string>
    <string name="p12">12. Tipo de tenencia de la vivienda:</string>
    <string name="p13">13. La vivienda se encuentra en espacios de alto riesgo:</string>
</resources>